<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImWatchLibrarySamples</string>
    <string name="say_to_shake">"Shake your i'm watch"</string>
    <string name="menu_settings">Settings</string>
    <string name="accel_x_label">Accel X:</string>
    <string name="accel_y_label">Accel Y:</string>
    <string name="accel_z_label">Accel Z:</string>
    <string name="rot_x_label">Rot X:</string>
    <string name="rot_y_label">Rot Y:</string>
    <string name="rot_z_label">Rot Z:</string>

</resources>