<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              tools:context=".SampleActivity">

    <TextView
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/say_to_shake"/>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accel_x_label"/>

        <TextView
                android:textSize="25sp"
                android:id="@+id/accelX"
                android:gravity="right"
                android:layout_weight="1.0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=""/>
    </LinearLayout>


    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accel_y_label"/>

        <TextView
                android:textSize="25sp"
                android:id="@+id/accelY"
                android:gravity="right"
                android:layout_weight="1.0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=""/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accel_z_label"/>

        <TextView
                android:textSize="25sp"
                android:id="@+id/accelZ"
                android:gravity="right"
                android:layout_weight="1.0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=""/>
    </LinearLayout>


    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rot_x_label"/>

        <TextView
                android:textSize="25sp"
                android:id="@+id/rotX"
                android:gravity="right"
                android:layout_weight="1.0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=""/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rot_y_label"/>

        <TextView
                android:textSize="25sp"
                android:id="@+id/rotY"
                android:gravity="right"
                android:layout_weight="1.0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=""/>
    </LinearLayout>


    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rot_z_label"/>

        <TextView
                android:textSize="25sp"
                android:id="@+id/rotZ"
                android:gravity="right"
                android:layout_weight="1.0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=""/>
    </LinearLayout>

</LinearLayout>